// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the Bolt TwigRender API renders attributes on the button component correctly 1`] = `
"<bolt-button
     align=\\"center\\"      color=\\"primary\\"      size=\\"medium\\"                      transform=\\"none\\"     
        
    

            

                  >


    <button  class=\\"u-bolt-margin-bottom-large c-bolt-button__root\\">

        <replace-with-children class=\\"c-bolt-button  c-bolt-button--medium   c-bolt-button--primary c-bolt-button--none c-bolt-button--center\\">
      
      <span class=\\"c-bolt-button__item \\">Hello world!</span>

          </replace-with-children>

  </button>
</bolt-button>"
`;

exports[`Test the Bolt TwigRender API renders the button component correctly 1`] = `
"<bolt-button
     align=\\"center\\"      color=\\"primary\\"      size=\\"medium\\"                      transform=\\"none\\"     
        
    

            

                  >


    <button  class=\\"c-bolt-button__root\\">

        <replace-with-children class=\\"c-bolt-button  c-bolt-button--medium   c-bolt-button--primary c-bolt-button--none c-bolt-button--center\\">
      
      <span class=\\"c-bolt-button__item \\">Hello world!</span>

          </replace-with-children>

  </button>
</bolt-button>"
`;

exports[`Test the Bolt TwigRender API renders the secondary button correctly 1`] = `
"<bolt-button
     align=\\"center\\"      color=\\"secondary\\"      size=\\"medium\\"                      transform=\\"none\\"     
        
    

            

                  >


    <button  class=\\"c-bolt-button__root\\">

        <replace-with-children class=\\"c-bolt-button  c-bolt-button--medium   c-bolt-button--secondary c-bolt-button--none c-bolt-button--center\\">
      
      <span class=\\"c-bolt-button__item \\">Secondary Button!</span>

          </replace-with-children>

  </button>
</bolt-button>"
`;
